# amaranth-spacewire-on-litex

./: .gitignore  .gitmodules  Makefile  README.md  make.py  spw_peripheral.py
app/: Makefile  spw_app.c
app-c/: Makefile  linker.ld  spw_app.c
app-rs/: Cargo.toml
app-rs/.cargo/: flash.sh
app-rs/src/: main.rs  print.rs  timer.rs
pac/: Cargo.toml  build.rs  memory_aliases
pac/src/: lib.rs
spacewire-rs/: Cargo.toml
spacewire-rs/src/: common.rs  datalink.rs  lib.rs  mib.rs
