[package]
name = "pac"
version = "0.1.0"
edition = "2021"
description = "svd2rust generated pac for the spacewire RISC-V example SoC"
authors = ["Andrés MANELLI <am@toroid.io>"]
repository = "https://github.com/Toroid-io/amaranth-spacewire-on-litex"

[dependencies]
bare-metal = "1.0.0"
riscv = "0.8.0"
vcell = "0.1.3"

[dependencies.riscv-rt]
optional = true
version = "0.9.0"

[features]
rt = ["riscv-rt"]

[build-dependencies]
svd2rust = "0.25.0"
